# Genesis-Assistant

./: .gitignore  LICENSE  README.en.md  README.md  index.html
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/.claude/: settings.local.json
app/src/: App.css  App.tsx  main.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/components/: AlarmOverlay.css  AlarmOverlay.tsx  CalendarDay.css  CalendarDay.tsx  DayListPanel.css  DayListPanel.tsx  EventDetailPanel.css  EventDetailPanel.tsx  MissingApiKeyMessage.tsx  OnboardingScreen.tsx  ReminderForm.tsx  ReminderItem.tsx  Sidebar.tsx  Tooltip.css  Tooltip.tsx
app/src/hooks/: useAudioUnlock.ts  useTooltip.ts
app/src/lib/: calendarImport.ts  dateFormat.ts  db.ts  gemini.ts  icsParser.ts  ollama.ts  scheduler.ts  settings.ts  toolExecutor.ts  tools.ts  types.ts
app/src/views/: CalendarView.css  CalendarView.tsx  ChatView.tsx  HomeView.tsx  RemindersView.tsx  ScheduleView.tsx  SettingsView.tsx
docs/: index.html
